--- a/coffee/src/index.html
+++ b/coffee/src/index.html
@@ -4,10 +4,18 @@
   <meta charset="utf-8">
   <title>Coffee App</title>
   <base href="/">
-
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#4051B3">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="icons/coffee-icon-192x192.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!--iOS meta tags for PWA-->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Coffee App">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="apple-touch-icon" href="icons/coffee-icon-192x192.png">
+
 </head>
 <body>
   <app-root></app-root>
